# Cutter_count

./: README.md  platformio.ini
SquareLine/: Cutter_count.sll  Cutter_count.spj  Cutter_countA.sll  Cutter_countA.spj  Cutter_countB.sll  Cutter_countB.spj  TOEY.sll  TOEY.spj
SquareLine/assets/: SquareLine_test.sll  ui_font_CPM300.c  ui_font_CPM300.fcfg  ui_font_Font1.c  ui_font_Font1.fcfg  ui_font_Font2.fcfg  ui_font_Font340.fcfg  ui_font_Fontth100.c  ui_font_Fontth100.fcfg  ui_font_Fontth35.fcfg  ui_font_Kanit35.c  ui_font_Kanit35.fcfg  ui_font_NotoSansTH60Bold.c  ui_font_NotoSansTH60Bold.fcfg  ui_font_font20.c  ui_font_font350.fcfg  ui_font_font360.fcfg  ui_font_font500.fcfg
src/: lv_conf.h  main.cpp  mainA.cpp(old)  master.h
src/gui/: gui.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Main.c  ui_comp_hook.c  ui_events.h  ui_font_Font2.c  ui_font_Fontth35.c  ui_helpers.c  ui_helpers.h  ui_img_1989276256.c  ui_img_home_22_png.c
src/ui/components/: ui_comp_hook.c
src/ui/fonts/: ui_font_CPM350.c  ui_font_Font2.c  ui_font_Font35.c  ui_font_Fontth35.c  ui_font_jersey20.c
src/ui/images/: ui_img_1115564765.c  ui_img_1329202414.c  ui_img_1989276256.c  ui_img_388382192.c  ui_img_738352802.c  ui_img_go_png.c  ui_img_home_22_png.c  ui_img_opening_png.c  ui_img_performance_png.c  ui_img_vial_png.c
src/ui/screens/: ui_Main.c  ui_Screen2.c  ui_Screen3.c
